update get user, update user routes and  update docs
